--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <title>Work Day Scheduler</title>
   </head>
 
-  <body>
-    <header class="jumbotron">
+  <body class=body>
+    <header class="jumbotron" id="header">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"> </p>
